--- a/apkVersion.html
+++ b/apkVersion.html
@@ -1,6 +1,8 @@
 {
-  "apkVersion": {
+  "apkVersion": [
+           {
            "VersionName":"1.0",
            "VersionCode":"1"
             }
+                ]
 }
